--- a/sass/components/_section-advanteges.scss
+++ b/sass/components/_section-advanteges.scss
@@ -10,27 +10,27 @@
     &__item + &__item {
         margin-left: 30px;
     }
-}
 
-.company-advantages__icon {
-    padding: 25px 100px;
-    margin-bottom: 30px;
+    &__icon {
+        padding: 25px 100px;
+        margin-bottom: 30px;
+        
+        background-color: $teamBgColor;
+        border-radius: 4px;
+    }
 
-    background-color: $teamBgColor;
-    border-radius: 4px;
-}
+    &__title {
+        margin-bottom: 10px;
+        
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    }
 
-.company-advantages__title {
-    margin-bottom: 10px;
-
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-}
-
-.company-advantages__text {
-    color: $secondaryTextColor;
-
-    line-height: 1.71;
+    &__text {
+        color: $secondaryTextColor;
+        
+        line-height: 1.71;
+    }
 }
