--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -10,12 +10,33 @@
         
         text-align: left;
     }
-}
 
-.page-footer__logo {
-    display: inline-block;
-    margin-bottom: 20px;
-    color: $whiteColor;
+    &__logo {
+        margin-bottom: 20px;
+        color: $whiteColor;
+    }
+
+    &__text {
+        display: inline-block;
+        margin-bottom: 20px;
+        
+        color: $whiteColor;
+        text-transform: uppercase;
+        line-height: 1.14; 
+    }
+        
+    &__links {
+        margin-left: 70px;
+        }
+    
+    &__social-links {
+        margin: 0;
+    }
+
+    &__link {
+        background-color: $footerBgcIcons;
+    }
+
 }
 
 .address__list {
@@ -44,44 +65,32 @@
     }
 }
 
-.page-footer__text {
-    display: inline-block;
-    margin-bottom: 20px;
-
-    color: $whiteColor;
-    text-transform: uppercase;
-    line-height: 1.14;
-}
-
-.page-footer__links {
-    margin-left: 70px;
-}
-
-.page-footer__social-links {
-    margin: 0;
-}
-
-.page-footer__link {
-    background-color: $footerBgcIcons;
-}
-
 .social-links__icon--white {
     fill: $whiteColor;
 }
 
 .footer-form {
     margin-left: 93px;
-}
 
-.footer-form__label {
-    display: block;
-    margin-bottom: 20px;
+    &__label {
+        display: block;
+        margin-bottom: 20px;
+        
+        text-transform: uppercase;
+        font-weight: 700;
+        line-height: 1.14;
+        color: $whiteColor;
+    }
 
-    text-transform: uppercase;
-    font-weight: 700;
-    line-height: 1.14;
-    color: $whiteColor;
-    display: block;
+    &__button {
+        padding: 10px 28px;
+    }
+
+    &__icon {
+        margin-left: 10px;
+        vertical-align: middle;
+    }
+
 }
 
 .footer-form__field {
@@ -104,13 +113,4 @@
         line-height: 1.25;
         color: $whiteColorTranslucent;
     }
-}
-
-.footer-form__button {
-    padding: 10px 28px;
-}
-
-.footer-form__icon {
-    margin-left: 10px;
-    vertical-align: middle;
 }
