--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -37,6 +37,48 @@
     @extend %list;
     display: flex;
     flex-wrap: wrap;
+
+    &__image {
+        display: block;
+    }
+
+    &__text {
+        padding: 20px 24px;
+        border: 1px solid #EEEEEE;
+        border-top-color: transparent;
+        
+        text-align: left;
+    }
+
+    &__title {
+        margin-bottom: 4px;
+        color: $primeryTextColor;
+        
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 0.06em;
+    }
+
+    &__type {
+        color: $secondaryTextColor;
+        
+        font-size: 16px;
+        line-height: 1.88;
+    }
+
+    &__thumb {
+        position: relative;
+        overflow: hidden;
+    }
+
+    &__description {
+        text-align: left;
+        font-size: 18px;
+        line-height: 1.56;
+        
+        color: $whiteColor;
+    }
+
 }
 
 .projects__item {
@@ -62,40 +104,6 @@
     }
 }
 
-.projects__image {
-    display: block;
-}
-
-.projects__text {
-    padding: 20px 24px;
-    border: 1px solid #EEEEEE;
-    border-top-color: transparent;
-
-    text-align: left;
-}
-
-.projects__title {
-    margin-bottom: 4px;
-    color: $primeryTextColor;
-
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-}
-
-.projects__type {
-    color: $secondaryTextColor;
-
-    font-size: 16px;
-    line-height: 1.88;
-}
-
-.projects__thumb {
-    position: relative;
-
-    overflow: hidden;
-}
-
 .projects__overlay {
     position: absolute;
     top: 0;
@@ -114,12 +122,4 @@
     .projects__link:hover &, .projects__link:focus & {
         transform: translateY(0);
     }
-}
-
-.projects__description {
-    text-align: left;
-    font-size: 18px;
-    line-height: 1.56;
-
-    color: $whiteColor;
 }
