--- a/sass/components/_section-hero.scss
+++ b/sass/components/_section-hero.scss
@@ -9,25 +9,25 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-}
 
-.hero__title {
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    color: $whiteColor;
-    width: 696px;
+    &__title {
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        color: $whiteColor;
+        width: 696px;
+        
+        font-size: 44px;
+        font-weight: 900;
+        line-height: 1.36;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        text-align: center;
+    }
 
-    font-size: 44px;
-    font-weight: 900;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.hero__button {
-    padding: 10px 32px;
-    min-width: 216px;
+    &__button {
+        padding: 10px 32px;
+        min-width: 216px;
+    }
 }
 
