--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -14,25 +14,25 @@
     &__item + &__item {
         margin-left: 30px;
     }
-}
 
-.team-list__image {
-    display: block;
-    margin-bottom: 30px;
-}
+    &__image {
+        display: block;
+        margin-bottom: 30px;
+    }
 
-.team-list__title {
-    margin-bottom: 10px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.19;
-}
+    &__title {
+        margin-bottom: 10px;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.19;
+    }
 
-.team-list__text {
-    margin-bottom: 16px;
-    color: $secondaryTextColor;
-    font-size: 16px;
-    line-height: 1.19;
+    &__text {
+        margin-bottom: 16px;
+        color: $secondaryTextColor;
+        font-size: 16px;
+        line-height: 1.19;
+    }
 }
 
 .social-links {
