--- a/sass/components/_section-work.scss
+++ b/sass/components/_section-work.scss
@@ -13,7 +13,6 @@
 .work {
     @extend %list;
     display: flex;
-    
 
     &__item {
         position: relative;
@@ -22,28 +21,28 @@
     &__item + &__item {
         margin-left: 30px;
     }
-}
 
-.work__image {
-    display: block;
-}
+    &__image {
+        display: block;
+    }
 
-.work__text {
-    position: absolute;
-    left: 0;
-    bottom: 0;
+    &__text {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        
+        width: 100%;
+        height: 70px;
+        background-color: rgba(47, 48, 58, 0.8);
+        padding: 27px 0;
+        
+        text-align: center;
+    }
 
-    width: 100%;
-    height: 70px;
-    background-color: rgba(47, 48, 58, 0.8);
-    padding: 27px 0;
-
-    text-align: center;
-}
-
-.work__title {
-    color: $whiteColor;
-    text-transform: uppercase;
-    font-size: 14px;
-    line-height: 1.14;
+    &__title {
+        color: $whiteColor;
+        text-transform: uppercase;
+        font-size: 14px;
+        line-height: 1.14;
+    }
 }
